added changes to html file

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Basic Astro API </title>
 </head>
 <body>
-    <h1>Basic Astro API</h1>
-    <p>Please use the following URL to access API: </p>
+    <h1>Basic Astrology API</h1>
+    <p>Please use the following URL to access API: https://basic-astrology-api.herokuapp.com/astrology/ </p>
+    <p>If you want to view characteristics of a singular zodiac sign, please add the name of the zodiac sign after /astrology/ e.g. https://basic-astrology-api.herokuapp.com/astrology/<i>taurus </i></p>
 </body>
 </html>
